# semiring-einsum

./: pyproject.toml
