[project]
name = "torch_semiring_einsum"
version = "1.1.0"
description = "Extensible PyTorch implementation of einsum that supports multiple semirings"
license = { text = "MIT" }
authors = [{ name = "Brian DuSell", email = "bdusell@gmail.com" }]
readme = "README.md"
classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
]

requires-python = "~=3.6"

dependencies = ["pynvml~=11.0", "torch", "typing-extensions"]

[project.optional-dependencies]
dev = [
  "sphinx~=5.1.1",
  "sphinxcontrib-bibtex~=2.5.0",
  "sphinx-autodoc-typehints~=1.19.2; python_version>='3.7'",
  "numpy~=1.23; python_version>='3.8'",
  "matplotlib~=3.5; python_version>='3.7'",
  "pynvml~=11.4.1; python_version>='3.6'",
]

[project.urls]
homepage = "https://bdusell.github.io/semiring-einsum/"
repository = "https://github.com/bdusell/semiring-einsum"


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
